<resources>
    <string name="app_name">Schedule</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="google_maps_api_key">AIzaSyBkOp9P3wFgMGbrbZfmDEGC3mLn5BOVPEI</string>
    <string name="title_activity_schedule">ScheduleActivity</string>

    <string name="date_title_sunday">Sun</string>
    <string name="date_title_monday">Mon</string>
    <string name="date_title_tuesday">Tue</string>
    <string name="date_title_wednesday">Wed</string>
    <string name="date_title_thursday">Thu</string>
    <string name="date_title_friday">Fri</string>
    <string name="date_title_saturday">Sat</string>
    <string name="btnOtp">Activate</string>
    <string name="open">Open</string>
    <string name="close">Close</string>


    //TODO MainActivity

    <string name="buttonInd">Bahasa Indonesia</string>
    <string name="buttonIng">Bahasa Inggris</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="Upload">synchronization</string>
    <string name="Error">Not Sync</string>
    <string name="Complete">Complete</string>
    <string name="title_activity_check_in">Map</string>
    <string name="title_activity_check_out">Map</string>
</resources>
